# mongotic

./: Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
mongotic/: __init__.py  model.py  orm.py
tests/: conftest.py  test_env.py  test_model_filed_operators.py  test_orm.py  test_version.py
